--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -8,6 +8,11 @@
       </a>
     </h1>
 
+    <form method="GET" action="">
+        <input type="text" name="q" placeholder="Search by username">
+        <button type="submit">Search</button>
+    </form>
+
     {% if driver_list %}
     <table class="table">
       <tr>
