--- a/templates/taxi/manufacturer_list.html
+++ b/templates/taxi/manufacturer_list.html
@@ -8,6 +8,11 @@
     </a>
   </h1>
 
+  <form method="GET" action="">
+      <input type="text" name="q" placeholder="Search by manufacturer name">
+      <button type="submit">Search</button>
+  </form>
+
   {% if manufacturer_list %}
     <table class="table">
       <tr>
