--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -1,28 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>
+<h1>
     Car list
     <a href="{% url 'taxi:car-create' %}" class="btn btn-primary link-to-page">
-      Create
+        Create
     </a>
-  </h1>
+</h1>
 
-  <form method="GET" action="">
-      <input type="text" name="q" placeholder="Search by car model">
-      <button type="submit">Search</button>
-  </form>
+{% include 'taxi/search_form.html' with placeholder="Search by car model" %}
 
   {% if car_list %}
-    <ul>
-      {% for car in car_list %}
-        <li>
-          <a href="{% url "taxi:car-detail" pk=car.id %} ">{{ car.id }}</a>
-          {{ car.model }} ({{ car.manufacturer.name }})
-        </li>
-      {% endfor %}
-    </ul>
+<ul>
+    {% for car in car_list %}
+    <li>
+        <a href="{% url "taxi:car-detail" pk=car.id %}">{{ car.id }}</a>
+        {{ car.model }} ({{ car.manufacturer.name }})
+    </li>
+    {% endfor %}
+</ul>
   {% else %}
-    <p>There are no cars in taxi</p>
+<p>There are no cars in taxi</p>
   {% endif %}
 {% endblock %}
