--- a/templates/taxi/manufacturer_list.html
+++ b/templates/taxi/manufacturer_list.html
@@ -1,55 +1,52 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>
+<h1>
     Manufacturer List
     <a href="{% url 'taxi:manufacturer-create' %}" class="btn btn-primary link-to-page">
-      Create
+        Create
     </a>
-  </h1>
+</h1>
 
-  <form method="GET" action="">
-      <input type="text" name="q" placeholder="Search by manufacturer name">
-      <button type="submit">Search</button>
-  </form>
+{% include 'taxi/search_form.html' with placeholder="Search by manufacturer name" %}
 
   {% if manufacturer_list %}
-    <table class="table">
-      <tr>
+<table class="table">
+    <tr>
         <th>ID</th>
         <th>Name</th>
         <th>Country</th>
         <th>Update</th>
         <th>Delete</th>
-      </tr>
+    </tr>
 
-      {% for manufacturer in manufacturer_list %}
-        <tr>
-          <td>
-              {{ manufacturer.id }}
-          </td>
-          <td>
-              {{ manufacturer.name }}
-          </td>
-          <td>
-              {{ manufacturer.country }}
-          </td>
-          <td>
-              <a href="{% url 'taxi:manufacturer-update' pk=manufacturer.id %}">
+    {% for manufacturer in manufacturer_list %}
+    <tr>
+        <td>
+            {{ manufacturer.id }}
+        </td>
+        <td>
+            {{ manufacturer.name }}
+        </td>
+        <td>
+            {{ manufacturer.country }}
+        </td>
+        <td>
+            <a href="{% url 'taxi:manufacturer-update' pk=manufacturer.id %}">
                 Update
-              </a>
-            </td>
-            <td>
-              <a style="color: red"
-                href="{% url 'taxi:manufacturer-delete' pk=manufacturer.id %}">
+            </a>
+        </td>
+        <td>
+            <a style="color: red"
+               href="{% url 'taxi:manufacturer-delete' pk=manufacturer.id %}">
                 Delete
-              </a>
-            </td>
-        </tr>
-      {% endfor %}
-    </table>
+            </a>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
 
   {% else %}
-      <p>There are no manufacturers in the service.</p>
+<p>There are no manufacturers in the service.</p>
   {% endif %}
 {% endblock %}
