--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -8,9 +8,12 @@
     </a>
 </h1>
 
-{% include 'taxi/search_form.html' with placeholder="Search by username" %}
+<form method="GET" action="">
+    {{ form.q }}
+    <button type="submit">Search</button>
+</form>
 
-    {% if driver_list %}
+{% if driver_list %}
 <table class="table">
     <tr>
         <th>ID</th>
@@ -22,15 +25,14 @@
     {% for driver in driver_list %}
     <tr>
         <td>{{ driver.id }}</td>
-        <td><a href="{{ driver.get_absolute_url }}">{{ driver.username }} {% if user == driver %} (Me){% endif %}</a></td>
+        <td><a href="{{ driver.get_absolute_url }}">{{ driver.username }} {% if user == driver %} (Me) {% endif %}</a></td>
         <td>{{ driver.first_name }}</td>
         <td>{{ driver.last_name }}</td>
         <td>{{ driver.license_number }}</td>
     </tr>
     {% endfor %}
-
 </table>
-    {% else %}
+{% else %}
 <p>There are no drivers in the service.</p>
-    {% endif %}
+{% endif %}
 {% endblock %}
