--- a/templates/taxi/manufacturer_list.html
+++ b/templates/taxi/manufacturer_list.html
@@ -8,9 +8,12 @@
     </a>
 </h1>
 
-{% include 'taxi/search_form.html' with placeholder="Search by manufacturer name" %}
+<form method="GET" action="">
+    {{ form.q }}
+    <button type="submit">Search</button>
+</form>
 
-  {% if manufacturer_list %}
+{% if manufacturer_list %}
 <table class="table">
     <tr>
         <th>ID</th>
@@ -22,31 +25,15 @@
 
     {% for manufacturer in manufacturer_list %}
     <tr>
-        <td>
-            {{ manufacturer.id }}
-        </td>
-        <td>
-            {{ manufacturer.name }}
-        </td>
-        <td>
-            {{ manufacturer.country }}
-        </td>
-        <td>
-            <a href="{% url 'taxi:manufacturer-update' pk=manufacturer.id %}">
-                Update
-            </a>
-        </td>
-        <td>
-            <a style="color: red"
-               href="{% url 'taxi:manufacturer-delete' pk=manufacturer.id %}">
-                Delete
-            </a>
-        </td>
+        <td>{{ manufacturer.id }}</td>
+        <td>{{ manufacturer.name }}</td>
+        <td>{{ manufacturer.country }}</td>
+        <td><a href="{% url 'taxi:manufacturer-update' pk=manufacturer.id %}">Update</a></td>
+        <td><a style="color: red" href="{% url 'taxi:manufacturer-delete' pk=manufacturer.id %}">Delete</a></td>
     </tr>
     {% endfor %}
 </table>
-
-  {% else %}
+{% else %}
 <p>There are no manufacturers in the service.</p>
-  {% endif %}
+{% endif %}
 {% endblock %}
