--- a/templates/taxi/car_search_form.html
+++ b/templates/taxi/car_search_form.html
@@ -1,4 +1,4 @@
 <form method="GET" action="">
-    <input type="text" name="q" placeholder="{{ placeholder }}">
+    <input type="text" name="car_search_query" placeholder="Search cars...">
     <button type="submit">Search</button>
 </form>
