--- a/templates/taxi/driver_list.html
+++ b/templates/taxi/driver_list.html
@@ -9,7 +9,7 @@
 </h1>
 
 <form method="GET" action="">
-    {{ form.q }}
+    {{ form.driver_search_query }}
     <button type="submit">Search</button>
 </form>
 
