--- a/templates/taxi/car_list.html
+++ b/templates/taxi/car_list.html
@@ -2,27 +2,35 @@
 
 {% block content %}
 <h1>
-    Car list
+    Car List
     <a href="{% url 'taxi:car-create' %}" class="btn btn-primary link-to-page">
         Create
     </a>
 </h1>
 
-<form method="GET" action="">
-    {{ form.car_search_query }}
-    <button type="submit">Search</button>
-</form>
+{% include "taxi/search_form.html" with search_param="car_search_query" placeholder="Search Cars" %}
 
 {% if car_list %}
-<ul>
+<table class="table">
+    <tr>
+        <th>ID</th>
+        <th>Model</th>
+        <th>Manufacturer</th>
+        <th>Update</th>
+        <th>Delete</th>
+    </tr>
+
     {% for car in car_list %}
-    <li>
-        <a href="{% url "taxi:car-detail" pk=car.id %}">{{ car.id }}</a>
-        {{ car.model }} ({{ car.manufacturer.name }})
-    </li>
+    <tr>
+        <td>{{ car.id }}</td>
+        <td>{{ car.model }}</td>
+        <td>{{ car.manufacturer.name }}</td>
+        <td><a href="{% url 'taxi:car-update' pk=car.id %}">Update</a></td>
+        <td><a style="color: red" href="{% url 'taxi:car-delete' pk=car.id %}">Delete</a></td>
+    </tr>
     {% endfor %}
-</ul>
+</table>
 {% else %}
-<p>There are no cars in taxi</p>
+<p>No cars found.</p>
 {% endif %}
 {% endblock %}
